# xdg-desktop-portal-termfilechooser

./: .gitignore  README.md  meson.build  meson_options.txt  termfilechooser.portal
assets/: lf-wrapper.sh  org.freedesktop.impl.portal.desktop.termfilechooser.service.in  ranger-wrapper.sh  termfilechooser.portal  xdg-desktop-portal-termfilechooser.service.in
examples/: example.conf  lf-wrapper.sh
lib/: pollen.h
src/: config.c  config.h  da.c  da.h  dbus.c  dbus.h  ds.c  ds.h  event_loop.c  event_loop.h  event_loop_impl.c  filechooser.c  filechooser.h  log.c  log.h  picker.c  picker.h  pollen_impl.c  request.c  request.h  sd-bus.h  uri.c  uri.h  xdptf.c  xdptf.h  xmalloc.c  xmalloc.h
